--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
     "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.23.2",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
+    "tailwindcss": "^2.1.0"
   }
 }
