--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
   },
   "scripts": {
     "start": "craco start",
@@ -41,11 +42,9 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.1.0",
     "autoprefixer": "^9.8.6",
     "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.23.2",
-    "postcss": "^7.0.35",
-    "tailwindcss": "^2.1.0"
+    "postcss": "^7.0.35"
   }
 }
