--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@loadable/component": "^5.14.1",
     "@reduxjs/toolkit": "^1.5.1",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
@@ -19,7 +22,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "node server.js",
     "build": "craco build",
     "eject": "react-scripts eject"
   },
